# Rocket-Up

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  rocket_up
include/: FlightData.hpp
include/components/: parachute.hpp
include/core/: Engine.hpp  Environment.hpp  Rocket.hpp
include/math/matrix/: matrix.h
include/math/vector/: Vector2.h
include/planets/: Planet.hpp
math/: matrix.py
src/: atmosphere.py  flight_data  flight_data.py  interpolation_types.py  main.cpp  motor.py  parachute.py  payload.py  rocket-up  rocket.py  simulation.py
src/core/: Atmosphere.hpp  Engine.cpp  Engine.hpp  Enviroment.hpp  Environment.cpp  Environment.hpp  Planet.hpp  Rocket.hpp
src/math/matrix/: matrix.cpp
src/math/vector/: Vector2.cpp  Vector3.cpp  Vector3.h
src/planets/: Earth.cpp  Earth.hpp  Planet.hpp  Planets.hpp
